--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Chomsky';
+    src: url('/fonts/Chomsky-8MOa2.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* General Styles */
 body {
     font-family: 'Georgia', serif;
